--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -132,6 +132,10 @@ button {
   background: url(../img/sprite_table.png) no-repeat 0 9999px;
 }
 
+.sprite_player {
+  background: url(../img/playbar_sprite.png) no-repeat 0 9999px;
+}
+
 .image_cover {
   position: absolute;
   left: 0;
@@ -140,4 +144,13 @@ button {
   bottom: 0;
   text-indent: -9999px;
   background: url(../img/sprite_cover.png) no-repeat -145px -57px;
+}
+
+.ant-message .ant-message-notice-content {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 60px;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
 }
